fix spacing off local vs preview

--- a/layouts/partials/sidenav/sidenav.scss
+++ b/layouts/partials/sidenav/sidenav.scss
@@ -125,6 +125,9 @@ aside.sidenav {
         .hover {
           display:none;
         }
+        span {
+          padding-left: 5px;
+        }
         span,
         img {
           vertical-align:top;
